feat: update page title and description to Russian
- Update page title to Russian
- Update meta description to Russian
- Update manifest.json app name to Russian

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="INNOPROG IDE - Онлайн редактор кода и платформа для совместного программирования для решения задач по программированию"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>INNOPROG IDE</title>
+    <title>INNOPROG IDE - Онлайн редактор кода</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
